--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,9 +6,10 @@
 .header {
   /* height: 10vh; */
   width: 100%;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
   left: 0;
+  z-index: 888888;
 }
 .h {
   z-index: 999;
